# Film-Stockpot

./: .gitignore  README.md  RUNNING.md  pyproject.toml
.github/workflows/: pylint.yml  release-windows.yml  version-bump-build.yml
CameraStyles/: catalog.json
Documents/: deep-research-report.md  film-stock-report.md  film-stock-report_2.md
FilmPresets/: _datasheet_manifest.json  _frontier_base.json  _index.json  _refresh_report.json  fuji_c200.json  fuji_natura_1600.json  fuji_pro_400h.json  fuji_superia_200.json  fuji_superia_xtra_400.json  fujifilm_200.json  fujifilm_400.json  harman_phoenix_ii.json  ilford_delta_3200.json  ilford_hp5_plus.json  kodak_ektar_100.json  kodak_gold_200.json  kodak_portra_160.json  kodak_portra_400.json  kodak_portra_800.json  kodak_royal_gold_400.json  kodak_tmax_100.json  kodak_tmax_400.json  kodak_trix_400.json  kodak_ultramax_400.json
installer/: film_stockpot.iss
packaging/: film_stockpot.spec  pyqt6_bootstrap.py
scripts/: build_windows.cmd  build_windows.ps1  bump_version.py  crosstalk_import_manifest.json  datasheet_curves.py  extract_datasheets.py  import_crosstalk_matrices.py  import_negpy_crosstalk.py  negpy_crosstalk_manifest.json  refresh_presets_from_datasheets.py  release_windows.cmd  release_windows.ps1
scripts/release_notes/: v0.3.4.md  v0.4.4.md  v0.4.5.md
src/film_stockpot/: __init__.py  __main__.py  app.py  cli.py  cli_exit.py  cli_report.py  main.py  (+6 more)
tests/: bench_preview.py  conftest.py  test_batch_export.py  test_camera_styles.py  test_cli.py  test_cli_report.py  test_color_wheel.py  test_console_io.py  test_crosstalk.py  test_curves.py  test_datasheet_sensitometry.py  test_export_engine.py  test_export_naming.py  test_extract_datasheets.py  test_folder.py  test_grading.py  test_io.py  test_main_window.py  test_paths.py  test_pipeline.py  test_presets.py  test_preview_engine.py  test_preview_stages.py  test_print.py  test_recent_folders.py  test_restoration.py  test_scanner.py  test_sidecar.py  test_tiff_loader.py  test_version.py
(+54 files in other folders)
