[project]
name = "film-stockpot"
version = "1.0.3"
description = "Apply film-stock looks to flat/log scans, Frontier-style"
readme = "README.md"
authors = [
    { name = "jboneng", email = "jboneng@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2024.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyqt6>=6.10.2",
    "tifffile>=2024.0",
]

[project.scripts]
film-stockpot = "film_stockpot.app:main"

[dependency-groups]
dev = [
    "pylint>=3.3",
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[tool.pylint.main]
py-version = "3.12"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",
    "import-error",
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "protected-access",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "unused-argument",
    "use-implicit-booleaness-not-comparison",
    "wrong-import-order",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
